# SPDX-FileCopyrightText: 2020 Serokell <https://serokell.io/>
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "deploy-rs"
version = "0.1.0"
authors = ["notgne2 <gen2@gen2.space>", "Serokell <hi@serokell.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
tokio = { version = "0.3.5", features = [ "full" ] }
serde_json = "1.0.48"
serde_derive = "1.0.104"
serde = "1.0.104"
merge = "0.1.0"
whoami = "0.9.0"
log = "0.4"
flexi_logger = "0.16"
notify = "5.0.0-pre.3"
futures-util = "0.3.6"
fork = "0.1"
thiserror = "1.0"
toml = "0.5"
yn = "0.1"
rnix = "0.8"

# smol_str is required by rnix, but 0.1.17 doesn't build on rustc
# 1.45.2 (shipped in nixos-20.09); it requires rustc 1.46.0. See
# <https://github.com/serokell/deploy-rs/issues/27>:
smol_str = "=0.1.16"


[[bin]]
name = "deploy"
path = "src/main.rs"

[[bin]]
name = "activate"
path = "src/activate.rs"