# SPDX-FileCopyrightText: 2020 Serokell <https://serokell.io/>
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "deploy-rs"
version = "0.1.0"
authors = ["notgne2 <gen2@gen2.space>", "Serokell <hi@serokell.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
flexi_logger = "0.16"
fork = "0.1"
futures-util = "0.3.6"
log = "0.4"
merge = "0.1.0"
notify = "5.0.0-pre.3"
rnix = "0.8"
serde = { version = "1.0.104", features = [ "derive" ] }
serde_json = "1.0.48"
signal-hook = "0.3"
thiserror = "1.0"
tokio = { version = "1.9.0", features = [ "full" ] }
toml = "0.5"
whoami = "0.9.0"
yn = "0.1"

# smol_str is required by rnix, but 0.1.17 doesn't build on rustc
# 1.45.2 (shipped in nixos-20.09); it requires rustc 1.46.0. See
# <https://github.com/serokell/deploy-rs/issues/27>:
smol_str = "=0.1.16"


[lib]
name = "deploy"
path = "src/lib.rs"
