# SPDX-FileCopyrightText: 2020 Serokell <https://serokell.io/>
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "deploy-rs"
version = "0.1.0"
authors = ["notgne2 <gen2@gen2.space>", "Serokell <hi@serokell.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = [ "wrap_help", "derive" ] }
dirs = "6"
flexi_logger = "0.16"
fork = "0.2"
futures-util = "0.3.31"
log = "0.4"
merge = "0.1.0"
notify = "8.0"
rnix = "0.8"
serde = { version = "1.0.219", features = [ "derive" ] }
serde_json = "1.0.140"
signal-hook = "0.3"
thiserror = "2.0"
tokio = { version = "1.44.0", features = [ "process", "macros", "sync", "rt-multi-thread", "fs", "time", "io-util" ] }
toml = "0.8"
whoami = "1.6"
yn = "0.1"
rpassword = "7.3.1"


[lib]
name = "deploy"
path = "src/lib.rs"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
